dark mode and bug fix

--- a/coding-challenges/src/App.css
+++ b/coding-challenges/src/App.css
@@ -87,7 +87,8 @@ div.selected {
 
 body {
   font-family: sans-serif;
-  color: #343a40;
+  background-color: #3a3a3a;
+  color: #f7f7f7;
   line-height: 1;
 }
 
@@ -106,6 +107,7 @@ body {
   cursor: pointer;
   border-top: 4px solid #fff;
   border-bottom: 4px solid #fff;
+  /* border-radius: 15px; */
 
   display: grid;
   grid-template-columns: auto 1fr auto;
@@ -127,14 +129,14 @@ body {
 }
 
 .content-box {
-  color: #464646;
+  /* color: #f7f7f7; */
   grid-column: 2 / -1;
   padding-bottom: 16px;
   line-height: 1.6;
 }
 
 .content-box ul {
-  color: #464646;
+  /* color: #f7f7f7; */
   margin-left: 16px;
   margin-top: 16px;
 
@@ -145,10 +147,10 @@ body {
 
 /* OPEN STATE */
 .open {
-  border-top: 4px solid #087f5b;
+  border-top: 4px solid #07be88;
 }
 
 .open .number,
 .open .title {
-  color: #087f5b;
+  color: #07be88;
 }
